# onnxcrepe

./: .gitignore  README.md  download_models.py  pyproject.toml  shootout.sh
crepetrt/: __main__.py  convert.py  core.py  decode.py  download.py  inference.py  loudness.py  runner.py  server.py  session.py  threshold.py  utils.py
onnxcrepe/: __init__.py  core.py  decode.py  download.py  inference.py  runner.py  server.py  session.py  utils.py
samples/: demo.py
samples/assets/: vocadito_12_f0.csv
tests/: conftest.py  test_core.py  test_decode.py  test_threshold.py
