[project]
name = "onnxcrepe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "onnxruntime-gpu>=1.22.0",
    "pandas>=2.3.2",
    "penn>=1.0.0",
    "tensorflow>=2.20.0",
    "tensorrt>=10.13.2.6",
    "tensorrt-cu12>=10.13.2.6",
    "tensorrt-dispatch-cu12>=10.13.2.6",
    "tensorrt-lean-cu12>=10.13.2.6",
    "torbi",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "tqdm>=4.67.1",
]
[tool.setuptools.packages.find]
where = ["."]
include = ["onnxcrepe*"]

[tool.uv.sources]
torbi = { git = "https://github.com/korguchi/torbi.git" }

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "line-profiler>=5.0.0",
    "mir-eval>=0.8.2",
    "pytest>=8.4.1",
]
